# RPP_Sentiment

./: .envexample  .gitignore  Procfile  README.md  nltk.txt  pyproject.toml  requirements.txt  wsgi.py
data/: data.csv
scripts/: run.bat  run.sh  setup.bat  setup.sh
src/: .envexample  __init__.py  app.py  experiment.py  model.pkl  model.py
src/constants/: http_status_codes.py
src/migrations/: env.py
src/migrations/versions/: 55119a6d8542_.py
src/models/: sentiment.py
src/routes/: api.py  default.py  webpage.py
src/seeds/: sentiment.py
src/static/styles/: _navbar.scss  main.css  main.css.map  main.scss
src/static/styles/components/: _card.scss
src/static/styles/pages/: _sentiment.scss
src/templates/includes/: navbar.html  script.html  sidebar.html  style.html
src/templates/layouts/: base.html
src/templates/pages/: add-data.html  contributor.html  dashboard.html
test/: sentiment.csv
