[tool.poetry]
name = "rpp_sentiment"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
Flask-Migrate = "^3.1.0"
Flask-Seeder = "^1.2.0"
flask-sqlalchemy = "^3.0.2"
python-dotenv = "^0.21.0"
gunicorn = "^20.1.0"
scikit-learn = "^1.1.3"
pandas = "^1.5.1"
Sastrawi = "^1.0.1"
nltk = "^3.7"
matplotlib = "^3.6.2"
imbalanced-learn = "^0.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
